# InterpreteMatematico

./: CMakeLists.txt  README.md  compilar_y_ejecutar.sh  concurrentSum.go  main.c  p.txt  pruebaLex.txt  pruebaP1.txt  salida_bien.txt  salida_prueba.txt  sistema_entrada.c  sistema_entrada.h
analizadores/: analizador_lexico.c  analizador_lexico.h  analizador_sintactico.c  analizador_sintactico.h
auxiliares/: definiciones.c  definiciones.h  errores.c  errores.h  tabla_simbolos.c  tabla_simbolos.h
include/analizadores/: analizador_lexico.h  analizador_sintactico.h
include/auxiliares/: definiciones.h  errores.h  funciones.h  tabla_simbolos.h
src/: dl_radians.c  main.c
src/analizadores/: analizador_lexico.lex  analizador_sintactico.c  analizador_sintactico.y
src/auxiliares/: definiciones.c  errores.c  funciones.c  help  tabla_simbolos.c
